crates/snapshot-tests/tests/snapshots/parser__bad_keys__newline2.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[UnterminatedString]: unterminated basic string, expected `"`
  ┌─ newline2:1:2
  │
1 │ "
  │  ^ expected `"`


error: unterminated basic string, expected `"`
 --> newline2:1:2
  |
1 | "
  |  ^ expected `"`
Error {
    kind: "UnterminatedString",
    message: "unterminated basic string, expected `\"`",
    span: 1..1,
    path: None,
}
